--- a/apps/kiosk-ui/package.json
+++ b/apps/kiosk-ui/package.json
@@ -12,32 +12,35 @@
         "test": "vitest"
     },
     "dependencies": {
+        "axios": "^1.6.5",
+        "clsx": "^2.1.0",
+        "i18next": "^23.10.0",
+        "jspdf": "^4.0.0",
+        "lucide-react": "^0.469.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-router-dom": "^7.1.0",
         "react-i18next": "^14.1.0",
-        "i18next": "^23.10.0",
-        "axios": "^1.6.5",
-        "zustand": "^5.0.0",
-        "lucide-react": "^0.469.0",
-        "clsx": "^2.1.0",
-        "tailwind-merge": "^2.2.0"
+        "react-router-dom": "^7.1.0",
+        "react-webcam": "^7.2.0",
+        "socket.io-client": "^4.8.3",
+        "tailwind-merge": "^2.2.0",
+        "zustand": "^5.0.0"
     },
     "devDependencies": {
         "@types/react": "^19.0.0",
         "@types/react-dom": "^19.0.0",
+        "@typescript-eslint/eslint-plugin": "^6.17.0",
+        "@typescript-eslint/parser": "^6.17.0",
         "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.17",
+        "eslint": "^8.56.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
         "postcss": "^8.4.33",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.3.3",
         "vite": "^6.0.0",
-        "vitest": "^2.1.0",
-        "eslint": "^8.56.0",
-        "@typescript-eslint/eslint-plugin": "^6.17.0",
-        "@typescript-eslint/parser": "^6.17.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.5"
+        "vitest": "^2.1.0"
     },
     "engines": {
         "node": ">=20.0.0"
