--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
 # Dependencies
 node_modules/
 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+ENV/
+env/
+.venv/
+pip-log.txt
+pip-delete-this-directory.txt
+*.egg-info/
+.eggs/
+*.egg
+
 # Build outputs
 dist/
 build/
@@ -16,6 +32,9 @@ build/
 .idea/
 *.swp
 *.swo
+.pydevproject
+.project
+.settings/
 
 # OS
 .DS_Store
@@ -30,6 +49,9 @@ yarn-error.log*
 # Testing
 coverage/
 .nyc_output/
+.pytest_cache/
+.coverage
+htmlcov/
 
 # Docker
 *.tar
@@ -41,6 +63,8 @@ coverage/
 .cache/
 .parcel-cache/
 .turbo/
+.ruff_cache/
+.mypy_cache/
 
 # Temporary files
 tmp/
