--- a/apps/api-gateway/Dockerfile.dev
+++ b/apps/api-gateway/Dockerfile.dev
@@ -1,15 +1,17 @@
-# Development Dockerfile with hot reload
-FROM node:20-alpine
+# Development Dockerfile for API Gateway
+FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install
+# Install dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY tsconfig.json ./
-COPY src ./src
+# Copy application
+COPY app/ ./app/
 
+# Expose port
 EXPOSE 3000
-EXPOSE 9229
 
-CMD ["npm", "run", "dev"]
+# Run with hot reload
+CMD ["python", "-m", "uvicorn", "app.main:socket_app", "--host", "0.0.0.0", "--port", "3000", "--reload"]
