--- a/services/auth-service/Dockerfile.dev
+++ b/services/auth-service/Dockerfile.dev
@@ -1,4 +1,4 @@
-# Python FastAPI Dockerfile for Auth Service
+# Development Dockerfile for Auth Service
 FROM python:3.11-slim
 
 WORKDIR /app
@@ -13,5 +13,5 @@ COPY app/ ./app/
 # Expose port
 EXPOSE 3001
 
-# Run with uvicorn
-CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "3001"]
+# Run with hot reload
+CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "3001", "--reload"]
